intel/bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/log.txt
bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:92:18: error: brackets are not allowed here; to declare an array, place the brackets after the name
  float [6][4] ao;
        ~~~~~~~  ^
                 [6][4]
bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:93:21: error: brackets are not allowed here; to declare an array, place the brackets after the name
  float [6][4] light;
        ~~~~~~~     ^
                    [6][4]
2 errors generated.
HLS FPGA Parse FAILED.
